--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {
   background: #0050cc;
 }
 
-/* Main viewer */
+/* Hauptviewer */
 #main-viewer {
   flex: 1;
   background: #f2f2f2;
@@ -65,7 +65,7 @@ body {
   align-items: center;
 }
 
-#main-viewer model-viewer {
+#main-model {
   width: 80%;
   height: 80%;
 }
@@ -80,208 +80,8 @@ body {
   display: none;
   background: white;
   z-index: 9999;
-  overflow: hidden;
   margin-left: 220px;
+  overflow: hidden;
 }
 
-/* Modellcontainer — ÜBEREINANDER */
-#compare-top,
-#compare-bottom {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-#compare-top {
-  top: 0;
-  clip-path: inset(0 0 50% 0);
-}
-
-#compare-bottom {
-  bottom: 0;
-  clip-path: inset(50% 0 0 0);
-}
-
-/* Slider horizontal */
-#compare-slider {
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background: red;
-  top: 50%;
-  cursor: ns-resize;
-  z-index: 10002;
-}
-
-/* Buttons links & rechts mittig */
-.compare-list {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  z-index: 10003;
-}
-
-#left-buttons { left: 20px; }
-#right-buttons { right: 20px; }
-
-/* Back Button */
-#back-btn {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background: black;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 16px;
-  z-index: 10004;
-}
-
-#back-btn:hover {
-  background: #333;
-}
-
-.compare-btn {
-  padding: 10px 16px;
-  background: #222;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 15px;
-}
-
-.compare-btn:hover {
-  background: #444;
-}
-</style>
-</head>
-<body>
-
-<!-- Sidebar -->
-<div id="sidebar">
-  <h3>Modelle</h3>
-
-  <button class="year-btn" onclick="showModel('1150.glb')">1150</button>
-  <button class="year-btn" onclick="showModel('1175.glb')">1175</button>
-  <button class="year-btn" onclick="showModel('1374.glb')">1374</button>
-  <button class="year-btn" onclick="showModel('1550.glb')">1550</button>
-  <button class="year-btn" onclick="showModel('1630.glb')">1630</button>
-  <button class="year-btn" onclick="showModel('1936.glb')">1936</button>
-
-  <button id="compare-start" onclick="openCompareMode()">Vergleichen</button>
-</div>
-
-<!-- Hauptansicht -->
-<div id="main-viewer">
-  <model-viewer id="main-model"
-    camera-controls
-    auto-rotate
-    interaction-prompt="none"
-    interaction-prompt-threshold="0">
-  </model-viewer>
-</div>
-
-<!-- Vergleich -->
-<div id="compare-wrapper">
-
-  <!-- Zurück Button -->
-  <button id="back-btn" onclick="closeCompareMode()">Zurück</button>
-
-  <!-- Modellwahl links -->
-  <div id="left-buttons" class="compare-list">
-    <button class="compare-btn" onclick="setTop('1150.glb')">1150</button>
-    <button class="compare-btn" onclick="setTop('1175.glb')">1175</button>
-    <button class="compare-btn" onclick="setTop('1374.glb')">1374</button>
-    <button class="compare-btn" onclick="setTop('1550.glb')">1550</button>
-    <button class="compare-btn" onclick="setTop('1630.glb')">1630</button>
-    <button class="compare-btn" onclick="setTop('1936.glb')">1936</button>
-  </div>
-
-  <!-- Modellwahl rechts -->
-  <div id="right-buttons" class="compare-list">
-    <button class="compare-btn" onclick="setBottom('1150.glb')">1150</button>
-    <button class="compare-btn" onclick="setBottom('1175.glb')">1175</button>
-    <button class="compare-btn" onclick="setBottom('1374.glb')">1374</button>
-    <button class="compare-btn" onclick="setBottom('1550.glb')">1550</button>
-    <button class="compare-btn" onclick="setBottom('1630.glb')">1630</button>
-    <button class="compare-btn" onclick="setBottom('1936.glb')">1936</button>
-  </div>
-
-  <!-- Vergleichsmodelle -->
-  <model-viewer id="compare-top"
-    camera-controls
-    auto-rotate="false"
-    interaction-prompt="none"
-    interaction-prompt-threshold="0">
-  </model-viewer>
-
-  <model-viewer id="compare-bottom"
-    camera-controls
-    auto-rotate="false"
-    interaction-prompt="none"
-    interaction-prompt-threshold="0">
-  </model-viewer>
-
-  <!-- Slider horizontal (Mitte) -->
-  <div id="compare-slider"></div>
-
-</div>
-
-<script>
-/* Modell anzeigen */
-function showModel(file) {
-  document.getElementById("main-model").src = file;
-}
-
-/* Vergleich öffnen */
-function openCompareMode() {
-  document.getElementById("compare-wrapper").style.display = "block";
-}
-
-/* Vergleich schließen */
-function closeCompareMode() {
-  document.getElementById("compare-wrapper").style.display = "none";
-}
-
-/* Oben Modell setzen */
-function setTop(file) {
-  document.getElementById("compare-top").src = file;
-}
-
-/* Unten Modell setzen */
-function setBottom(file) {
-  document.getElementById("compare-bottom").src = file;
-}
-
-/* Slider Logik */
-const slider = document.getElementById("compare-slider");
-let dragging = false;
-
-slider.onmousedown = () => dragging = true;
-window.onmouseup = () => dragging = false;
-
-window.onmousemove = (e) => {
-  if (!dragging) return;
-
-  const pos = Math.min(window.innerHeight - 50, Math.max(50, e.clientY)); 
-  slider.style.top = pos + "px";
-
-  document.getElementById("compare-top").style.clipPath = `inset(0 0 ${window.innerHeight - pos}px 0)`;
-  document.getElementById("compare-bottom").style.clipPath = `inset(${pos}px 0 0 0)`;
-};
-
-/* ESC */
-document.addEventListener("keydown", (e) => {
-  if (e.key === "Escape") closeCompareMode();
-});
-</script>
-
-</body>
-</html>
+/* Modelle li*
